# prompt-armor

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  Makefile  pyproject.toml  railway.json  start.sh
backend/data/: promptarmor.db
backend/promptarmor/: config.py  database.py  ensure_db.py  main.py
backend/promptarmor/ingestion/: __main__.py  base.py  classifier.py  constants.py  deepset.py  lakera.py  llm_classifier.py  neuralchemy.py  pipeline.py  spml.py
backend/promptarmor/middleware/: client_ip.py  rate_limit.py
backend/promptarmor/models/: __init__.py  attacks.py  defenses.py  evals.py  taxonomy.py
backend/promptarmor/routers/: attacks.py  eval.py  report.py  system_prompts.py  taxonomy.py
backend/promptarmor/services/: attack_selector.py  eval_runner.py  filters.py  llm_target.py  output_filters.py  scoring.py
backend/tests/: conftest.py  test_api_routers.py  test_attack_selector.py  test_classifier.py  test_eval_pipeline.py  test_filters.py  test_injection_classifier.py  test_models.py  test_normalization.py  test_rate_limit.py  test_scoring.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  index.ts  sse.ts  types.ts
frontend/src/components/: ComparisonView.tsx  DefenseConfigForm.tsx  ErrorBoundary.tsx  Layout.tsx  LiveResultsStream.tsx  ReportViewer.tsx  ScorecardView.tsx
frontend/src/hooks/: useEvalRun.ts
frontend/src/pages/: Compare.tsx  Dashboard.tsx  Report.tsx  (+4 more)
(+4 files in other folders)
